--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Condensed:wght@300;400;700&display=swap");
 
+/* @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"); */
+
 @layer base {
   body {
     @apply font-[Poppins];
