--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,11 @@
   margin: auto;
   width: 60%;
 }
+.LandMarksContainer {
+  position: relative;
+  height: 400px;
+  overflow: scroll;
+}
 
 .activeGeorgia {
   width: 10em;
@@ -127,8 +132,8 @@
 }
 
 .map-container {
-  width: 80%;
-  height: 70vh;
+  width: 100%;
+  height: 50vh;
 }
 
 .map-container-for-small-screens {
