--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
 }
 .LandMarksContainer {
   position: relative;
-  height: 400px;
+  height: 450px;
   overflow: scroll;
 }
 
@@ -143,4 +143,48 @@
 .map-container-for-small-screens {
   width: 100%;
   height: 40vh;
+}
+
+.landmark-cart-btn {
+  border: 1px solid #f51767;
+  outline: none;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  width: max-content;
+  border-radius: 5px;
+  height: 35px;
+  font-weight: 600;
+  font-size: 14px;
+  padding: 0px 20px;
+  background-color: rgb(255, 255, 255);
+  color: #f51767;
+}
+
+.landmark-cart-btn-added {
+  border: 1px solid #f51767;
+  outline: none;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  width: max-content;
+  border-radius: 5px;
+  height: 35px;
+  font-weight: 600;
+  font-size: 14px;
+  padding: 0px 20px;
+  background-color: hsl(338, 92%, 33%);
+  color: white;
 }
