--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@
   transition-duration: 2s;
   transform: scale(1.08);
 }
-
+/* 
 .cart-btn {
   border: 1px solid rgb(245, 23, 103);
   outline: none;
@@ -100,7 +100,7 @@
 .cart-btn:hover {
   border-color: rgb(187, 32, 88);
   background-color: #bb2058;
-}
+} */
 
 /* .cart-btnActive {
   border-color: rgb(187, 32, 88);
@@ -187,4 +187,101 @@
   padding: 0px 20px;
   background-color: hsl(338, 92%, 33%);
   color: white;
+}
+
+.cart-btn {
+  border: 1px solid rgb(245, 23, 103);
+  outline: none;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  font: inherit;
+  /* flex-direction: column; */
+  /* -webkit-box-align: center; */
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: space-around;
+  /* width: max-content; */
+  /* width: auto; */
+  border-radius: 999px;
+  height: 40px;
+  font-weight: 600;
+  font-size: 15px;
+  padding: 0px 40px;
+  background-color: #f51767;
+  color: rgb(255, 255, 255);
+  padding: 0.75rem 3rem;
+}
+
+.cart-btn-bump {
+  border: 1px solid rgb(245, 23, 103);
+  outline: none;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  font: inherit;
+  /* flex-direction: column; */
+  /* -webkit-box-align: center; */
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: space-around;
+  /* width: max-content; */
+  /* width: auto; */
+  border-radius: 999px;
+  height: 40px;
+  font-weight: 600;
+  font-size: 15px;
+  padding: 0px 40px;
+  background-color: #f51767;
+  color: rgb(255, 255, 255);
+  padding: 0.75rem 3rem;
+  animation: bump 0.5s;
+}
+
+.cart-btn:hover {
+  border-color: rgb(187, 32, 88);
+  background-color: #bb2058;
+}
+
+.icon {
+  width: 1.35rem;
+  height: 1.35rem;
+  margin-right: 0.5rem;
+}
+
+.badge {
+  background-color: #b94517;
+  padding: 0.25rem 1rem;
+  border-radius: 25px;
+  margin-left: 0.6rem;
+  font-weight: bold;
+}
+
+.button:hover .badge,
+.button:active .badge {
+  background-color: #92320c;
+}
+
+.bump {
+  animation: bump 300ms ease-out;
+}
+
+@keyframes bump {
+  0% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(0.9);
+  }
+  30% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1.15);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
