optional Navbar change

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
 
 /* @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"); */
 
+/* body {
+  font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+} */
 @layer base {
   body {
     @apply font-[Poppins];
